packages/typ/tests/fixtures/diagnostics/0844_polyvar_closed_row_extra_pattern_09.ml
let use_iota : [ `A of int ] -> int = function
  | `A x -> x
  | `B -> 8
